fix: setup for vscode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,6 @@
     "dockerfile": "Dockerfile",
     "context": "."
   },
-  "forwardPorts": [8081],
-  "remoteUser": "root"
+  "remoteUser": "root",
+  "runArgs": ["--network=host"]
 }
