--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/netinfo": "^9.3.9",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "6.0.13",
-    "@react-navigation/stack": "^6.3.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "@sayem314/react-native-keep-awake": "^1.1.0",
     "buffer": "^6.0.3",
-    "deep-diff": "^1.0.2",
     "deprecated-react-native-prop-types": "^2.3.0",
     "hermes-engine": "^0.11.0",
     "i18n-js": "^4.1.1",
@@ -54,7 +53,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-device-info": "^11.1.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.7.1",
+    "react-native-gesture-handler": "^2.20.0",
     "react-native-keychain": "^9.0.0",
     "react-native-localize": "^3.1.0",
     "react-native-option-menu": "^1.1.3",
@@ -64,7 +63,7 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.3.12",
-    "react-native-reanimated": "3.7.0",
+    "react-native-reanimated": "3.8.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "3.29.0",
@@ -85,7 +84,6 @@
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-native": "^11.5.2",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/deep-diff": "^1.0.2",
     "@types/enzyme": "^3.10.12",
     "@types/i18n-js": "^3.8.3",
     "@types/jest": "^29.2.4",
