--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,15 +1,13 @@
 [workspace]
-members = [
-    "lib",
-    "android",
-    "zingomobile_utils"
-]
+members = ["lib", "android", "zingomobile_utils"]
 resolver = "2"
 
 [workspace.dependencies]
-zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, tag = "1.8.1", features=["test-elevation"] }
+zingolib = { git = "https://github.com/zingolabs/zingolib", default-features = true, rev = "cab1ca5b99120bee291d67f37f325715679b29fb", features = [
+    "test-elevation",
+] }
 uniffi = "0.27"
-tokio =  { version = "1.24", features = [ "full" ] }
+tokio = { version = "1.24", features = ["full"] }
 rustls = { version = "0.23.13", features = ["ring"] }
 
 [profile.release]
