--- a/rust/android/Cargo.toml
+++ b/rust/android/Cargo.toml
@@ -11,8 +11,8 @@ regchest = []
 [dev-dependencies]
 zingolib = { workspace = true }
 zingomobile_utils = { path = "../zingomobile_utils" }
-regchest_utils = { git="https://github.com/zingolabs/zingo-regchest", default-features=true, branch = "dev" }
-darkside-tests = { git="https://github.com/zingolabs/zingolib", default-features=true, tag = "1.8.1" }
+regchest_utils = { git = "https://github.com/zingolabs/zingo-regchest", default-features = true, branch = "dev" }
+darkside-tests = { git = "https://github.com/zingolabs/zingolib", default-features = true, rev = "cab1ca5b99120bee291d67f37f325715679b29fb" }
 json = "0.12.4"
 env_logger = "0.10.0"
 tokio = { workspace = true }
