fix: adding this test to CI

--- a/.github/workflows/android-ubuntu-e2e-test-ci.yaml
+++ b/.github/workflows/android-ubuntu-e2e-test-ci.yaml
@@ -124,7 +124,8 @@ jobs:
           "screen_awake", 
           "send", 
           "sync_report", 
-          "transaction_history"
+          "transaction_history",
+          "shielding"
         ]
     env:
       CACHE-KEY: ${{ inputs.cache-key }}
