--- a/.github/workflows/ci-nightly.yaml
+++ b/.github/workflows/ci-nightly.yaml
@@ -19,6 +19,7 @@ jobs:
     strategy:
       matrix:
         arch: [ x86_64, x86, arm64-v8a, armeabi-v7a ]
+      fail-fast: false
     uses: ./.github/workflows/android-build.yaml
     needs: create-cache-key
     with:
@@ -29,6 +30,7 @@ jobs:
     strategy:
       matrix:
         abi: [ x86_64, x86 ]
+      fail-fast: false
     uses: ./.github/workflows/android-ubuntu-integration-test-ci.yaml
     needs: [create-timestamp, android-build]
     with:
@@ -38,12 +40,16 @@ jobs:
       api-level: 29
 
   ios-build:
+    strategy:
+      fail-fast: false
     uses: ./.github/workflows/ios-build.yaml
     needs: create-cache-key
     with:
       cache-key: ${{ needs.create-cache-key.outputs.cache-key }}
        
   ios-integration-test:
+    strategy:
+      fail-fast: false
     uses: ./.github/workflows/ios-integration-test.yaml
     needs: [ create-timestamp, ios-build ]
     with:
