--- a/.github/workflows/android-macos-integration-test.yaml
+++ b/.github/workflows/android-macos-integration-test.yaml
@@ -102,7 +102,8 @@ jobs:
 
       - name: Install docker
         run: |
-          brew install docker
+          brew install --head colima
+          brew install --formula docker
           colima start
 
       - name: Pull regchest docker image
