--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
   android-build:
     strategy:
       matrix:
-        arch: [x86_64, x86, armeabi-v7a]
+        arch: [ x86_64, x86, arm64-v8a, armeabi-v7a ]
     uses: ./.github/workflows/android-build.yaml
     needs: create-cache-key
     with:
@@ -41,8 +41,9 @@ jobs:
     strategy:
       matrix:
         config:
-          - { abi: x86_64, api-level: 34 }
-          - { abi: x86, api-level: 29 }
+          - { abi: x86_64, api-level: 34, target: default }
+          - { abi: x86, api-level: 29, target: default }
+          - { abi: arm64-v8a, api-level: 30, target: default }
     uses: ./.github/workflows/android-ubuntu-integration-test-ci.yaml
     needs: [create-timestamp, android-build]
     with:
@@ -50,13 +51,15 @@ jobs:
       cache-key: ${{ needs.create-cache-key.outputs.cache-key }}
       abi: ${{ matrix.config.abi }}
       api-level: ${{ matrix.config['api-level'] }}
+      target: ${{ matrix.config.target }}
 
   android-ubuntu-e2e-test-ci:
     strategy:
       matrix:
         config:
-          - { abi: x86_64, api-level: 30 }
-          - { abi: x86, api-level: 28 }
+          - { abi: x86_64, api-level: 30, target: default }
+          - { abi: x86, api-level: 28, target: default }
+          - { abi: arm64-v8a, api-level: 30, target: default }
     uses: ./.github/workflows/android-ubuntu-e2e-test-ci.yaml
     needs: [create-timestamp, android-build]
     with:
@@ -64,6 +67,7 @@ jobs:
       cache-key: ${{ needs.create-cache-key.outputs.cache-key }}
       abi: ${{ matrix.config.abi }}
       api-level: ${{ matrix.config['api-level'] }}
+      target: ${{ matrix.config.target }}
 
   ios-build:
     uses: ./.github/workflows/ios-build.yaml
