--- a/.github/workflows/android-ubuntu-e2e-test-ci.yaml
+++ b/.github/workflows/android-ubuntu-e2e-test-ci.yaml
@@ -68,6 +68,9 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
+      - name: Install QEMU arm
+        run: sudo apt install qemu-system-arm
+
       - name: JVM Heap Size
         run: export _JAVA_OPTIONS="-Xmx4g"
 
@@ -194,6 +197,9 @@ jobs:
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
+
+      - name: Install QEMU arm
+        run: sudo apt install qemu-system-arm
 
       - name: Install protoc
         run: sudo apt install protobuf-compiler
