--- a/.github/workflows/android-ubuntu-integration-test-ci.yaml
+++ b/.github/workflows/android-ubuntu-integration-test-ci.yaml
@@ -68,6 +68,9 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
+      - name: Install QEMU arm
+        run: sudo apt install qemu-system-arm
+
       - name: Check AVD cache
         uses: actions/cache/restore@v4
         id: avd-cache
@@ -175,6 +178,9 @@ jobs:
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
+
+      - name: Install QEMU arm
+        run: sudo apt install qemu-system-arm
 
       - name: Install protoc
         run: sudo apt install protobuf-compiler
