fix: arm's with macos-13, x86's with ubuntu

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
   android-macos-integration-test:
     strategy:
       matrix:
-        arch: [armeabi-v7a]
+        arch: [arm64-v8a, armeabi-v7a]
     uses: ./.github/workflows/android-macos-integration-test.yaml
     needs: [ create-timestamp, create-cache-key, android-build ]
     with:
@@ -43,7 +43,6 @@ jobs:
         config:
           - { abi: x86_64, api-level: 34, target: default }
           - { abi: x86, api-level: 29, target: default }
-          - { abi: arm64-v8a, api-level: 30, target: google_apis_playstore }
     uses: ./.github/workflows/android-ubuntu-integration-test-ci.yaml
     needs: [create-timestamp, android-build]
     with:
@@ -59,7 +58,6 @@ jobs:
         config:
           - { abi: x86_64, api-level: 30, target: default }
           - { abi: x86, api-level: 28, target: default }
-          - { abi: arm64-v8a, api-level: 30, target: google_apis_playstore }
     uses: ./.github/workflows/android-ubuntu-e2e-test-ci.yaml
     needs: [create-timestamp, android-build]
     with:
