--- a/.github/workflows/ci-nightly.yaml
+++ b/.github/workflows/ci-nightly.yaml
@@ -29,7 +29,7 @@ jobs:
   android-macos-integration-test:
     strategy:
       matrix:
-        arch: [armeabi-v7a]
+        arch: [arm64-v8a, armeabi-v7a]
     uses: ./.github/workflows/android-macos-integration-test.yaml
     needs: [ create-timestamp, create-cache-key, android-build ]
     with:
@@ -41,9 +41,8 @@ jobs:
     strategy:
       matrix:
         config:
-          - { abi: x86_64, api-level: 34 }
-          - { abi: x86, api-level: 29 }
-          - { abi: arm64-v8a, api-level: 30 }
+          - { abi: x86_64, api-level: 34, target: default }
+          - { abi: x86, api-level: 29, target: default }
       fail-fast: false
     uses: ./.github/workflows/android-ubuntu-integration-test-ci.yaml
     needs: [create-timestamp, android-build]
@@ -52,6 +51,7 @@ jobs:
       cache-key: ${{ needs.create-cache-key.outputs.cache-key }}
       abi: ${{ matrix.config.abi }}
       api-level: ${{ matrix.config['api-level'] }}
+      target: ${{ matrix.config.target }}
 
   ios-build:
     strategy:
