--- a/.github/workflows/android-build.yaml
+++ b/.github/workflows/android-build.yaml
@@ -93,7 +93,7 @@ jobs:
         run: rustup default nightly
 
       - name: AWS libcrypto rust building
-        run: cargo install --force --locked bindgen-cli
+        run: cargo install --force --locked bindgen-cli --version 0.70.1
 
       - name: Cargo uniffi kotlin
         working-directory: ./rust/lib
