explicitely defined 'runs-on' on some jobs to test if they get picked up by runners

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,11 @@ on:
 jobs:
   jest-test:
     uses: ./.github/workflows/jest-test.yaml
+    runs-on: self-hosted
 
   create-timestamp:
     uses: ./.github/workflows/create-timestamp.yaml
+    runs-on: ubuntu-latest
 
   create-cache-key:
     uses: ./.github/workflows/create-cache-key.yaml
